--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-redux": "4.3.0",
     "react-router-dom": "4.0.0",
     "redux": "^3.0.4",
-    "redux-form": "^6.7.0",
+    "redux-form": "6.6.3",
     "redux-thunk": "^2.2.0"
   }
 }
